--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,4 +122,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  .server-list-table-cell {
+    @apply text-black text-center;
+  }
 }
